--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "name": null,
   "userimg": "https://avatars3.githubusercontent.com/u/7386708?v=4",
   "sort": "star",
-  "order": "asc",
+  "order": "desc",
   "includeFork": false,
   "theme": "light.css",
   "types": [
